Adding introduction section along with accompaning
along with accompanying subsections

--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -72,6 +72,31 @@
 	\listoffigures
 	\cleardoublepage
 	\setcounter{page}{1}
-
+	
+	
+	\section{Introduction}\label{sec:intro}
+		This chapter of the document aims to identify the architectural design specifications which satisfy the identified functional requirements of the NavUP system. Additionally, it will include any terms, abbreviations, acronyms and references used throughout this document.
+	
+		\subsection{Purpose}\label{subsec:purpose}
+			The main purpose of this document is firstly identifying the subsystem architectural design requirements, constraints, integration need  and then addressing these elemts by using architectural patterns and diagrams to model system behaviour and interactions. The choice of appropriate technologies for the implementation of this system that satisfy the various requirements will also be prosposed along with motivations for these propositions 
+				
+		\subsection{Definitions, Acronyms, and Abbreviations}\label{subsec:daa}
+			\begin{table}[h!]
+				\centering
+				\caption{Table of Definitions, Acronyms, and Abbreviations used in this document}
+				\label{tab: Table 1}
+				\begin{tabular}{| m{4cm} | m{12cm} |}
+					\hline
+					\textbf{Term} & \textbf{Definition} \\
+					\hline
+					\hline
+					
+				\end{tabular}
+			\end{table}
+	
+		\subsection{References}\label{subsec:references}
+		List each document referenced in the SRS by title, report number, date, publisher, and where and how to get it
+	
+	\newline
 
 \end{document}
