Adding remaining components of skeleton

--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -96,7 +96,35 @@
 	
 		\subsection{References}\label{subsec:references}
 		List each document referenced in the SRS by title, report number, date, publisher, and where and how to get it
+		
+	\section{Requirements and Constraints}\label{sec:requirements}
+			\subsection{External Interface Requirements}\label{subsec:external}
+				Provide a detailed description for each of the system interfaces, user interfaces, hardware interfaces, software interfaces, and communications interfaces. The description of each interface includes for each input and output, the name, format, valid range, timing and other relevant information.
+
+			\subsection{Performance Requirements}\label{subsec:performance}
+				Describe all performance related capabilities of the product
+			\subsection{Design Constraints}\label{subsec:design constraints}	
+				Describe all constraints that related to the design phase of the product
+			\subsection{Software System Attributes}\label{subsec:attributes}
+
+		\newpage
+
+		\section{Module Design}\label{sec:moduels}	
+			\subsection{Navigation Subsystem}\label{subsec:navigation}
+			\subsection{User Subsystem}\label{subsec:users}
+			\subsection{Notification Subsystem}\label{subsec:notification}
+			\subsection{Points of Interest Subsystem}\label{subsec:points of interest}
+
+		\newpage
+
+		\section{System assessment}\label{sec:assessment }	
+			\subsection{Technology choices}\label{subsec:tech choices}
+			\subsection{Quality and Feasibility of Design}\label{subsec:quality}
+
+	 \cleardoublepage
+	 \section{Appendices}\label{sec:appendices}
+ 		
 	
-	\newline
+
 
 \end{document}
