Adding Diagrams to Notifications Subsection

--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -113,6 +113,32 @@
 			\subsection{Navigation Subsystem}\label{subsec:navigation}
 			\subsection{User Subsystem}\label{subsec:users}
 			\subsection{Notification Subsystem}\label{subsec:notification}
+			
+				\begin{figure}[h!]
+					\includegraphics[scale=0.5]{Class_Diagram_Notifications.JPG}
+					\caption{Notifications Subsystem Class Diagram}	
+				\end{figure}
+			
+				\begin{figure}[h!]
+					\includegraphics[scale=0.5]{Activity_Diagram_Notifications.JPG}
+					\caption{Natifications Subsystem Activity Diagram}	
+				\end{figure}
+				
+				\begin{figure}[h!]
+					\includegraphics[scale=0.5]{Sequence_Diagram_Notifications.JPG}
+					\caption{Notifications Subsystem Sequence Diagram}	
+				\end{figure}
+				
+				\begin{figure}[h!]
+					\includegraphics[scale=0.5]{State_Diagram_Notifications.JPG}
+					\caption{Notifications Subsystem State Diagram}	
+				\end{figure}
+				
+				\begin{figure}[h!]
+					\includegraphics[scale=0.5]{Use_Case_Diagram_Notifications.JPG}
+					\caption{Notifications Subsystem Use Case Diagram}	
+				\end{figure}
+				
 			\subsection{Points of Interest Subsystem}\label{subsec:points of interest}
 
 		\newpage
