--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -115,25 +115,13 @@
 		\section{Module Design}\label{sec:moduels}	
 			\subsection{Navigation Subsystem}\label{subsec:navigation}
 				\begin{figure}[H]
-                     \includegraphics[scale=0.5]{Navigation_State_getRoute.png}
-                     \caption{getRoute State Diagram}
-					 \label{fig:navigation_state_getRoute}
+                     \includegraphics[height=0.8\textheight]{Navigation_State.png}
+                     \caption{Route Access State Diagram}
+					 \label{fig:navigation_state}
 			    \end{figure}
 			    
 			    \begin{figure}[H]
-                     \includegraphics[scale=0.5]{Navigation_State_saveRoute.png}
-                     \caption{saveRoute State Diagram}
-					 \label{fig:navigation_state_saveRoute}
-			    \end{figure}
-			    
-			    \begin{figure}[H]
-                     \includegraphics[scale=0.5]{Navigation_State_deleteRoute.png}
-                     \caption{deleteRoute State Diagram}
-					 \label{fig:navigation_state_deleteRoute}
-			    \end{figure}
-			    
-			    \begin{figure}[H]
-                     \includegraphics[scale=0.5]{Navigation_UseCase.png}
+                     \includegraphics[width=\textwidth]{Navigation_UseCase.png}
                      \caption{UseCase Diagram}
 					 \label{fig:navigation_UseCase}
 			    \end{figure}
