Re-added diagrams and fixed changes
Fixed issues caused by an accidental merge to master by another meember

--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -4,17 +4,10 @@
 \usepackage{hyperref}
 \usepackage{array}
 \usepackage{enumitem}
-<<<<<<< HEAD
 \usepackage{graphicx}
 \usepackage[section]{placeins}
 \usepackage{titlesec}
 \usepackage{float}
-=======
-\usepackage{float}
-\usepackage{graphicx}
-\usepackage[section]{placeins}
-\usepackage{titlesec}
->>>>>>> refs/remotes/origin/master
 
 % Set depth for sections (one more than usual)
 \setcounter{secnumdepth}{4}
@@ -42,13 +35,10 @@
 
 	\begin{titlepage}
 		\begin{center}
-<<<<<<< HEAD
 			\begin{figure}
 				\includegraphics[width=\linewidth]{logo.jpg}	
 			\end{figure}
-=======
 
->>>>>>> refs/remotes/origin/master
 			\line(1,0){400}\\
 			[6mm]
 			\huge{
@@ -56,33 +46,23 @@
 			}\\
 			[2mm]
 			\line(1,0){300}\\
-			[15mm]
+			[10mm]
 			\textsc{\large NavUP}\\
 			[7.5mm]
 			\textsc{\large University of Pretoria - Team Algol}\\
-			[20mm]
+			[10mm]
 			\large{\textbf{Created By:}}\\
 			[2mm]
-<<<<<<< HEAD
-			\href{https://github.com/DuartBreedt}{Duart Breedt - 15054692}\\
-			\href{https://github.com/KeatonPennels}{Keaton Pennels - 14373018}\\
-			[5mm]
-			
-		
-		
-			\href{https://github.com/Chris19951225/COS-301-Team-Algol}{\textsc{\Large GitHub Repository - Team Algol}}\\[2mm]
-			\href{https://github.com/Chris19951225/COS-301-Team-Algol}{\textsc{For more information, please click here}}\\[2mm]
-=======
-			\large{
 			% Add your own details here 
-				\href{https://github.com/KeatonPennels}{Keaton Pennels - 14373018}\\
-				\href{https://github.com/lindelo}{Lindelo Mapumulo - 12002862}\\
-			}
-			[5cm]
+			\href{https://github.com/KeatonPennels}{Keaton Pennels - 14373018}\\
+			\href{https://github.com/lindelo}{Lindelo Mapumulo - 12002862}\\
+			\href{https://github.com/DuartBreedt}{Duart Breedt - 15054692}\\[5mm]
 
-		\href{https://github.com/Chris19951225/COS-301-Team-Algol}{\textsc{\Large GitHub Repository - Team Algol}\\[2mm]
-		  For more information, please click here}
->>>>>>> refs/remotes/origin/master
+
+		\href{https://github.com/Chris19951225/COS-301-Team-Algol}{\textsc{\Large GitHub Repository - Team Algol}}
+		\\
+		\href{https://github.com/Chris19951225/COS-301-Team-Algol}{\textsc {For more information, please click here}}
+		  
 		\end{center}
 		\begin{flushright}
 			\textsc{\large 26 February 2017}
@@ -124,13 +104,6 @@
 		List each document referenced in the SRS by title, report number, date, publisher, and where and how to get it
 		
 	\section{Requirements and Constraints}\label{sec:requirements}
-<<<<<<< HEAD
-			\subsection{External Interface Requirements}\label{subsec:external}
-				Provide a detailed description for each of the system interfaces, user interfaces, hardware interfaces, software interfaces, and communications interfaces. The description of each interface includes for each input and output, the name, format, valid range, timing and other relevant information.
-
-			\subsection{Performance Requirements}\label{subsec:performance}
-				Describe all performance related capabilities of the product
-=======
 	The following section provides all the requirements of NavUP, and possible constraints regarding the mobile application.
 			\subsection{External Interface Requirements}\label{subsec:external}
 			This section provides a detailed description of all the inputs and outputs of the system. Descriptions of the user, hardware, software and communication interfaces are also provided.
@@ -231,7 +204,6 @@ A user should also be able to send a notification. The notification page should 
 		    \item[]MUST       : NavUP must be dependable at all times.
 		    \end{itemize}	
 						
->>>>>>> refs/remotes/origin/master
 			\subsection{Design Constraints}\label{subsec:design constraints}	
 				This section provides the design constraints on NavUP's software, which is caused by the device's hardware.
 				
@@ -260,7 +232,6 @@ A user should also be able to send a notification. The notification page should 
 
 		\section{Module Design}\label{sec:moduels}	
 			\subsection{Navigation Subsystem}\label{subsec:navigation}
-<<<<<<< HEAD
 				\begin{figure}[H]
                      \includegraphics[height=0.8\textheight]{Navigation_State.png}
                      \caption{Route Access State Diagram}
@@ -274,8 +245,6 @@ A user should also be able to send a notification. The notification page should 
 			    \end{figure}
 
 			    
-=======
->>>>>>> refs/remotes/origin/master
 			\subsection{User Subsystem}\label{subsec:users}
 			\subsection{Notification Subsystem}\label{subsec:notification}
 			\subsection{Points of Interest Subsystem}\label{subsec:points of interest}
