Updated Latex File with Points of Interest Diagrams

--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -247,7 +247,20 @@ A user should also be able to send a notification. The notification page should 
 			    
 			\subsection{User Subsystem}\label{subsec:users}
 			\subsection{Notification Subsystem}\label{subsec:notification}
+
+			\newpage
 			\subsection{Points of Interest Subsystem}\label{subsec:points of interest}
+				\begin{figure}[H]
+		 \includegraphics[height=0.8\textheight]{PoI_Class.png}
+                     \caption{Point of Interest Class Diagram}
+					 \label{fig:PoI_class}
+			    \end{figure}
+
+			\begin{figure}[H]
+		 \includegraphics[height=0.8\textheight]{PoI_UseCase.png}
+                     \caption{Point of Interest Use Case Diagram}
+					 \label{fig:PoI_UseCase}
+			    \end{figure}
 
 		\newpage
 
