Adding description to sequence diagram of notification subsystem

--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -282,6 +282,7 @@ A user should also be able to send a notification. The notification page should 
 					\includegraphics[scale=0.5]{Diagrams/Sequence_Diagram_Notifications.JPG}
 					\caption{Notifications Subsystem Sequence Diagram}	
 				\end{figure}
+				{The above sequence diagram of the Notification Subsystem visualises how the Notifications process begins with the Notification Manager. The process then shifts to the creation of the Notification Request which instantiates a Notification object and returns back to the Manager. Manager then takes time to validate the request and, if granted, dispatches it to User.\\\\}
 				
 				\begin{figure}[h!]
 					\includegraphics[scale=0.5]{Diagrams/State_Diagram_Notifications.JPG}
