adding description to use case diagram of the notification subsystem

--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -294,6 +294,7 @@ A user should also be able to send a notification. The notification page should 
 					\includegraphics[scale=0.5]{Diagram/Use_Case_Diagram_Notifications.JPG}
 					\caption{Notifications Subsystem Use Case Diagram}	
 				\end{figure}
+				{The use case diagram of the Notifications subsystem depicts how important the Notification Manager is for the functionality and goal of the subsystem. It shows how all the important actions take place due to the Manager and how without it the system would collapse. It also shows how the user is hardly involved in the subsystem except to receive validated Notifications.\\\\}
 				
 				\begin{figure}[H]
                      \includegraphics[height=0.8\textheight]{Navigation_State.png}
