Use Case description for UMM

--- a/Architectural Requirements Specifications and Design.tex
+++ b/Architectural Requirements Specifications and Design.tex
@@ -260,7 +260,7 @@ A user should also be able to send a notification. The notification page should 
                      \caption{User Management Model Use Case Diagram}
 					 \label{fig:user_usecase}
 			    \end{figure}
-			    
+			    {The user and admin will be inherited from the guest actor. If a guest chooses to register it will be notified by the system, this extends the registration process. For the CRUD information of a user, a user will be able to display a route as well as view the distance it walked.}
 			    
 			\subsection{Navigation Subsystem}\label{subsec:navigation}
 			
